--- a/yoursocialtools/common/templates/common/base.html
+++ b/yoursocialtools/common/templates/common/base.html
@@ -21,7 +21,7 @@
 
     <!-- This is navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="http://127.0.0.1:8000/"><b>YourSocialTools.com</b></a>
+            <a class="navbar-brand" href="/"><b>YourSocialTools.com</b></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
