--- a/yoursocialtools/common/templates/common/home.html
+++ b/yoursocialtools/common/templates/common/home.html
@@ -54,14 +54,14 @@
                     </div>
                 </div>
 
-                 {% comment %} <div class="col-sm-6">
+                 <div class="col-sm-6">
                     <div class="card">
                     <div class="card-body">
-                        <h3 class="card-title">Instagram Hashtag Generator</h3>
-                        <p class="card-text">You Can generate Hashtags for instagram.</p>
-                        <a href="{% url 'hashtag' %}" class="btn btn-primary">Open</a>
+                        <h3 class="card-title">Youtube Video Downloader</h3>
+                        <p class="card-text">You Can Download Youtube Videos</p>
+                        <a href="{% url 'yt_downloader' %}" class="btn btn-primary">Open</a>
                     </div>
-                    </div> {% endcomment %}
+                    </div> 
                 </div>
 
             </div> 
