--- a/yoursocialtools/common/templates/common/base.html
+++ b/yoursocialtools/common/templates/common/base.html
@@ -2,7 +2,15 @@
 <html lang="en">
 {% load static %}
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8PPQCQMY5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-J8PPQCQMY5');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
