--- a/yoursocialtools/common/templates/common/base.html
+++ b/yoursocialtools/common/templates/common/base.html
@@ -10,13 +10,15 @@
       gtag('js', new Date());
 
       gtag('config', 'G-J8PPQCQMY5');
-    </script>
+    </script> 
     <meta charset="UTF-8">
+    <meta name="keywords" content="yoursocialtools, your social tools, yst, yoursocialtools.com">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title>YourSocialTools.com</title>
+        <link rel="icon" type="image/png" href="{% static 'common/images/favicon.png' %}" sizes="16x16"/>
     
-        <link rel="stylesheet" href="{% static 'youtube/bootstrap/bootstrap.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'common/bootstrap/bootstrap.css' %}" type="text/css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
