--- a/yoursocialtools/common/templates/common/home.html
+++ b/yoursocialtools/common/templates/common/home.html
@@ -64,7 +64,7 @@
                     </div> 
                 </div>
 
-                <div class="col-sm-6">
+                {% comment %} <div class="col-sm-6">
                     <div class="card">
                     <div class="card-body">
                         <h3 class="card-title">Facebook Video Downloader</h3>
@@ -72,7 +72,7 @@
                         <a href="{% url 'fb_downloader' %}" class="btn btn-primary">Open</a>
                     </div>
                     </div> 
-                </div>
+                </div> {% endcomment %}
 
             </div> 
         </div>
